[package]
name = "crate2nix"
version = "0.2.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
cargo_metadata = "0.7.4"
failure = "0.1"
fs_extra = "1.1"
lazy_static = "1.3"
pathdiff = "0.1"
quicli = "0.4"
structopt = "0.2"
semver = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempdir = "0.3"
tera = "1.0.0-beta.3"
