[package]
name = "crate2nix"
version = "0.8.0-alpha.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"
license = "Apache-2.0"
description = "crate2nix generates nix (as in NixOS) build files for rust using cargo."
repository = "https://github.com/kolloch/crate2nix"
readme = "../README.md"
keywords = ["nixos", "nix", "cargo", "build"]

[dependencies]
cargo_metadata = "0.9"
failure = "0.1"
hex = "0.4"
itertools = "0.8.2"
lazy_static = "1"
nix-base32 = "0.1"
pathdiff = "0.1"
quicli = { version = "0.4", default-features = false }
structopt = "0.3"
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = { version = "1", default-features = false }
toml = "0.5"
url = "1"
url_serde = "0.2"

[dev-dependencies]
colored-diff = "0.2.2"
fs_extra = "1.1"
tempdir = "0.3"
