[package]
name = "bin_required_features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bin_required_features"
required-features = ["compilemainbinary"]

[[bin]]
name = "bin_not_to_be_compiled"
required-features = ["afeature"]

[features]
afeature = []
compilemainbinary = []