[package]
# See bug https://github.com/kolloch/crate2nix/issues/56
name = "futures_compat"
version = "0.1.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
