[package]
name = "renamed_build_deps"
version = "0.1.0"
authors = ["Andreas Rammhold <andreas@rammhold.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
which_crate = {package = "which", version = "3.0", default-features = false}
