[package]
name = "sub_dir_crates"
version = "0.1.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib1 = { git = "https://github.com/kolloch/with_sub_crates.git", rev="f8ad2b98ff0eb5fea4962f55e3ced5b0b5afe973" }
lib2 = { git = "https://github.com/kolloch/with_sub_crates.git", rev="f8ad2b98ff0eb5fea4962f55e3ced5b0b5afe973" }
