[package]
name = "with_problematic_crates"
version = "0.1.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"

[dependencies]
# There was a bug in buildRustCrate for this one...
tera = "*"

# Regression test for issue #4
html5ever = "0.22.5"

# Other popular application creates
actix-web ="*"
diesel = "*"
crossbeam-epoch = "*"
crossbeam-deque = "*"
crossbeam-channel = "*"
env_logger = "*"
parking_lot ="*"
error-chain = "*"
hyper = "*"
tokio = "*"
tokio-timer = "*"
tokio-io = "*"
tokio-tcp = "*"
mime = "*"
tokio-threadpool = "*"
