[package]
name = "codegen"
version = "0.1.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dbus = { git = "https://github.com/diwic/dbus-rs/" }

[build-dependencies]
dbus-codegen = { git = "https://github.com/diwic/dbus-rs" }
